RESOLVED FIXED170817
Air::RegLiveness should be constraint-based
https://bugs.webkit.org/show_bug.cgi?id=170817
Summary Air::RegLiveness should be constraint-based
Filip Pizlo
Reported 2017-04-13 11:55:06 PDT
Patch forthcoming.
Attachments
the patch (12.78 KB, patch)
2017-04-13 11:56 PDT, Filip Pizlo
saam: review+
Filip Pizlo
Comment 1 2017-04-13 11:56:49 PDT
Created attachment 307008 [details] the patch
Build Bot
Comment 2 2017-04-13 11:59:39 PDT
Attachment 307008 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/b3/air/AirRegLiveness.h:105: The parameter name "liveness" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/b3/air/AirRegLiveness.h:105: The parameter name "block" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 3 2017-04-13 19:01:05 PDT
Comment on attachment 307008 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=307008&action=review r=me > Source/JavaScriptCore/b3/air/AirAllocateRegistersAndStackByLinearScan.cpp:226 > + // FIXME: We can get this information from the liveness constraints. Except of > + // course we want to separate the earlies of one instruction from the lates of > + // the next. Please make a bug and link here. > Source/JavaScriptCore/b3/air/AirAllocateRegistersAndStackByLinearScan.cpp:241 > + // FIXME: This could reg the register sets from somewhere else, like the > + // liveness constraints. Except we want those constraints to be laid out like > + // how they would have been by RegLiveness, since we want to separate the lates > + // of one inst from the earlies of the next. reg => get Also, please make a bug and link it here.
Filip Pizlo
Comment 4 2017-04-14 09:44:34 PDT
(In reply to Saam Barati from comment #3) > Comment on attachment 307008 [details] > the patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=307008&action=review > > r=me > > > Source/JavaScriptCore/b3/air/AirAllocateRegistersAndStackByLinearScan.cpp:226 > > + // FIXME: We can get this information from the liveness constraints. Except of > > + // course we want to separate the earlies of one instruction from the lates of > > + // the next. > > Please make a bug and link here. > > > Source/JavaScriptCore/b3/air/AirAllocateRegistersAndStackByLinearScan.cpp:241 > > + // FIXME: This could reg the register sets from somewhere else, like the > > + // liveness constraints. Except we want those constraints to be laid out like > > + // how they would have been by RegLiveness, since we want to separate the lates > > + // of one inst from the earlies of the next. > > reg => get > > Also, please make a bug and link it here. Filed https://bugs.webkit.org/show_bug.cgi?id=170850 for both of those and fixed the typo.
Filip Pizlo
Comment 5 2017-04-14 10:44:02 PDT
Note You need to log in before you can comment on or make changes to this bug.